Created 3 buttons on the main activity

--- a/MyMemory/app/src/main/res/values/strings.xml
+++ b/MyMemory/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyMemory</string>
+    <string name="create_memory">Create memory</string>
+    <string name="find_memory">Find memory</string>
+    <string name="quote">Quote</string>
 </resources>
