--- a/MyMemory/app/src/main/res/values/strings.xml
+++ b/MyMemory/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="create_memory">Create memory</string>
     <string name="find_memory">Find memory</string>
     <string name="quote">Quote</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
