--- a/MyMemory/app/src/main/res/values/strings.xml
+++ b/MyMemory/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="title_memory_detail">My memories</string>
+    <string name="quote_of_the_day">Quote of the day:</string>
+    <string name="date">Date:</string>
+    <string name="title">Title</string>
+    <string name="memory">Memory</string>
+    <string name="save">Save</string>
 </resources>
