Added delete functionality

--- a/MyMemory/app/src/main/res/values/strings.xml
+++ b/MyMemory/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="title">Title</string>
     <string name="memory">Memory</string>
     <string name="save">Save</string>
+    <string name="delete_all_memories">Delete All Memories</string>
+    <string name="load_sample_memories">load sample memories</string>
 </resources>
