Fixed a lot of visual issues Wrote database & ui-tests Added comments for kdoc

--- a/MyMemory/app/src/main/res/values/strings.xml
+++ b/MyMemory/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="save">Save</string>
     <string name="delete_all_memories">Delete All Memories</string>
     <string name="load_sample_memories">load sample memories</string>
+    <string name="back">Back</string>
 </resources>
